test/compflags/vass/callstack-internal-modules.d-s-.good
callstack-internal-modules.chpl:27: In function 'foo':
callstack-internal-modules.chpl:28: error: Unsupported atomic type: string
